remove first paragraph to focus on Chemotion; add info box to link choose ELN page

--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -9,9 +9,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion ELN
 
-[NFDI4Chem](https://www.nfdi4chem.de/) will support those ELNs that are relevant for documentation of chemical research activities. This support will include hosting one ELN instance for each of the relevant ELNs at KIT for teaching and training purposes. This service was established in 2022 to allow all scientists to compare ELNs and their functionalities. [Comparing and testing different ELNs](/docs/choose_eln) is a prerequisite for making the right choice. Furthermore, NFDI4Chem organises various seminars with the goal of giving a first impression of different ELNs. These seminars are a good opportunity for ELN providers to demonstrate their ELN's usefulness and possible applications. For past and forthcoming seminars, please see the [Stammtisch event page](https://www.nfdi4chem.de/index.php/event/stammtisch-chemotion/).
-
-## Chemotion ELN
+:::info
+To find out about choosing an ELN, head to the [Choose the right ELN
+article](docs/choose_eln) and test demo instance [here](https://demo.chemotion.scc.kit.edu/).
+:::
 
 Chemotion is the ELN reference instance in NFDI4Chem. The Chemotion ELN is developed by several software developers at different NFDI4Chem sites. The ELN development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) in Karlsruhe as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
