--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -11,16 +11,16 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 :::info
 To find out about choosing an ELN, head to the [Choose the right ELN
-article](docs/choose_eln) and test demo instance [here](https://demo.chemotion.scc.kit.edu/).
+article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.scc.kit.edu/).
 :::
 
-Chemotion is the ELN reference instance in NFDI4Chem. The Chemotion ELN is developed by several software developers at different NFDI4Chem sites. The ELN development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) in Karlsruhe as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
+Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. It started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
-The Chemotion ELN was designed for chemists and adapted to the special requirements of chemical laboratory work and documentation. It therefore serves as a digitalization instrument for work in chemistry, developed to overcome the current limitations of the existing systems. To reach this goal, the development, improvement, and extension of the ELN is a community effort.
+The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the research lifecycle. Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
 
-The ELN is also used in other disciplines beyond chemistry as it offers a broad generic functionality to meet the needs of scientists working in interdisciplinary environments. These generic functions are still being extended and adapted. The latest generic extension (from November 2023) is [LabIMotion](https://www.chemotion.net/docs/labimotion), which allows completely non-chemical functionalities to be used by designing new modules.
+In addition to its primary focus on chemistry, the ELN is also utilized in various other disciplines due to its versatile functionality that caters to the needs of scientists operating in interdisciplinary environments. These generic elements are continually being refined and adapted. The latest extension, introduced in November 2023, is [LabIMotion](https://www.chemotion.net/docs/labimotion), which enables users to incorporate entirely non-chemical functionalities by designing new modules.
 
-Chemotion ELN offers a specific function that facilitates the [publication of research data](/docs/data_publishing): it supports the transfer of data from a user's ELN account to a research data repository. This function reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific text publications. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). Additionally, Chemotion Repository is connected to other databases (e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/)) and repositories (e.g. [NMRShiftDB2](https://nmrshiftdb.nmr.uni-koeln.de/), soon to be superseded by [nmrXiv](https://nmrxiv.org/)), to ensure best visibility and a user-friendly search of original research data. The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
+Chemotion ELN offers a specific functionality that facilitates the [publication of research data](/docs/data_publishing): it supports the transfer of data from a user's ELN account to a research data repository. This reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific journal articles. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). Additionally, Chemotion Repository is connected to other databases (e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/)) and repositories (e.g. [NMRShiftDB2](https://nmrshiftdb.nmr.uni-koeln.de/), soon to be superseded by [nmrXiv](https://nmrxiv.org/)), to ensure best visibility and a user-friendly search of original research data. The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
 
 A short introduction to the Chemotion ELN as well as the connection to the Chemotion repository is demonstrated in this video:
 
@@ -43,11 +43,13 @@ A short introduction to the Chemotion ELN as well as the connection to the Chemo
     ></iframe>
 </VideoPrivacy>
 
-### Documentation, information, and contact
+### Documentation, Information, and Contact
 
-Chemotion ELN and its functions were described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
+Chemotion ELN and its functionalities are described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
 
-## Sources and further information
+NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the LabIMotion extension. Visit the [workshop overview page](https://www.nfdi4chem.de/workshops/) for more information.
+
+## Sources and Further Information
 
 -   [Chemotion ELN: an Open Source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
 -   [Chemotion-ELN part 2: adaption of an embedded Ketcher editor to advanced research applications](https://doi.org/10.1186/s13321-018-0292-9)
