--- a/docs/10_domains/30_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/30_pharmaceutical_chemistry.mdx
@@ -20,6 +20,10 @@ The most common types of data in pharmaceutical/medicinal chemistry can be divid
 
 ## ELNs and Other Tools
 
+For effective data management, software tools should be selected in a uniform manner within a project or research group with the aim to [organize](/docs/data_organisation)
+and streamline workflows. This involves establishing clear usage guidelines, including metadata templates drawn from minimum information standards for a given method, where available.
+These should be outlined in a [data management plan (DMP)](/docs/dmp) for each project. Many universities supply tools and templates for DMPs (see the [respective article](/docs/dmp) for more information).
+
 To meet the requirements for FAIR data management, electronic lab notebooks (ELNs) are particularly useful as they can take over many documentation tasks for researchers. The [ELN-Finder](https://eln-finder.ulb.tu-darmstadt.de/search?f.K03=Pharmacy,equals&spc.page=1) offers a selection of pharmacy-specific ELNs. How to choose the right ELN for the research group can be read [here](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/choose_eln/).
 
 <ElnFinderPharm />
