--- a/docs/10_domains/60_synthetic_chemistry.mdx
+++ b/docs/10_domains/60_synthetic_chemistry.mdx
@@ -24,7 +24,9 @@ Overall, [metadata](/docs/metadata/) should always be included when collecting a
 
 ## ELNs and Other Tools
 
-For planning research data management and creating data management plans, tools such as [RDMO](https://rdmorganiser.github.io/) and [DMP-Online](https://dmponline.dcc.ac.uk/) are suitable. Many universities have their own instances of these solutions.
+For effective data management, software tools should be selected in a uniform manner within a project or research group with the aim to [organize](/docs/data_organisation)
+and streamline workflows. This involves establishing clear usage guidelines, including metadata templates drawn from minimum information standards for a given method, where available.
+These should be outlined in a [data management plan (DMP)](/docs/dmp) for each project. Many universities supply tools and templates for DMPs (see the [respective article](/docs/dmp) for more information).
 
 If you want your data to comply with the [FAIR principles](/docs/fair/) it can be very tedious and extremely time consuming if you try to apply the FAIR principles to your data retrospectively if your existing workflows involve a large degree of analogue documentation (e.g. paper lab notebooks). The reality is that you need tools to take care of certain aspects of the FAIR principles automatically so you don’t have to apply them manually each time. [Electronic Lab Notebooks (ELNs)](/docs/eln/) are very powerful tools that can help you with this. Depending on what ELN you use, the [metadata](/docs/metadata/) can be automatically assigned in both human and [machine-readable formats](/docs/format_standards/). Furthermore, some ELNs can automatically generate interoperable [open file formats](/docs/format_standards/#format-standards-in-chemistry) for your analytical data. Choosing the right ELN can be challenging and this process should be thought about and carried out carefully. You can find out more on [how to choose the right ELN here](/docs/choose_eln/):
 
